# pote

./: .gitignore  README.md  basic.html  basic.html.md  callback.html  callback.html.md  config.html  config.html.md  display.html  display.html.md  index.html  index.html.md  llms-ctx-full.txt  llms.txt  logger_loguru.html  logger_loguru.html.md  project.html  project.html.md  pyproject.toml  robots.txt  search.json  settings.ini  setup.py  sitemap.xml  test.html  test.html.md  widgets.html  widgets.html.md
.github/workflows/: deploy.yaml  test.yaml
nbs/: 00_basic.ipynb  00_project.ipynb  02_logger_loguru.ipynb  05_test.ipynb  10_callback.ipynb  15_config.ipynb  17_display.ipynb  20_widgets.ipynb  _quarto.yml  apilist.txt  index.ipynb  llms-ctx-full.txt  llms-ctx.txt  llms.txt  nbdev.yml
nbs/static/: apollo_astronauts.json
pote/: _modidx.py  basic.py  callback.py  config.py  display.py  logger_loguru.py  project.py  test.py  widget.py
static/: wordlist.txt
tool/: refresh_llm_docs.sh
