[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pote"
dynamic = ["version"]
description = "Python helpers, utils or code not worthy ot its own repo"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Spikey", email = "civvic@gmail.com"}]
keywords = ['python', 'nbdev', 'jupyter', 'notebook', 'javascript']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['fastcore>=1.5.28', 'rich>=13.3.2', 'ipywidgets>=8.1.5', 'jupyter_ui_poll>=1.0.0', 'loguru>=0.7.0']

[project.urls]
Repository = "https://github.com/civvic/pote"
Documentation = "https://civvic.github.io/pote"

[project.entry-points.nbdev]
pote = "pote._modidx:d"

[project.optional-dependencies]
dev = ['notebook', 'jupyterlab', 'nbclassic', 'nbdev', 'reorder-python-imports']

[tool.setuptools.dynamic]
version = {attr = "pote.__version__"}

[tool.setuptools.packages.find]
include = ["pote"]

[tool.nbdev]
allowed_cell_metadata_keys = ['solveit_ai']
